syntax = "proto3";

package auth.v1;

import "validate/validate.proto";
import "common/v1/user.proto";
import "common/v1/session.proto";

option go_package = "github.com/Artyom099/factory/shared/pkg/auth/v1;auth_v1";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Whoami(WhoamiRequest) returns (WhoamiResponse) {}
}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginResponse {
    string session_uuid = 1 [(validate.rules).string.uuid = true]; // UUID активной сессии
}

message WhoamiRequest {
    string session_uuid = 1 [(validate.rules).string.uuid = true]; // UUID активной сессии
}

message WhoamiResponse {
    common.v1.User user = 1; // Владелец текущей сессии
    common.v1.Session session = 2; // Информация о текущей сессии
}
