syntax = "proto3";

package common.v1;

import "validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Artyom099/factory/shared/pkg/common/v1;common_v1";

message Session {
    string uuid = 1 [(validate.rules).string.uuid = true];
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    google.protobuf.Timestamp expires_at = 4;
}
